# crews

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.sh
cli/: main.py
core/: agent_factory.py  config_store.py  crew_factory.py  deployment_scaffold.py  env_manager.py  exceptions.py  git_manager.py  models.py  tools.py
integrations/: slack.py
tests/: test_agent_factory.py  test_cli.py  test_config_store.py  test_crew_factory.py  test_deployment_scaffold.py  test_env_manager.py  test_git_manager.py  test_models.py  test_slack_integration.py  test_slack_message_routing.py
